--- a/DataBase/DataBaseLib/DataBaseLib.vcxproj.filters
+++ b/DataBase/DataBaseLib/DataBaseLib.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="Common.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="IMultiThread.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Table.cpp">
@@ -51,6 +54,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Cell.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Common.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="IMultiThread.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
